Fix selenium deprecation warnings

--- a/TODO
+++ b/TODO
@@ -1,3 +1,3 @@
-[ ] warnings.warn("find_element_by_* commands are deprecated. Please use find_element() instead")
+[x] warnings.warn("find_element_by_* commands are deprecated. Please use find_element() instead")
 [ ] better logging of timers
 [ ] parallelize by fanning-out the order retrieval across drivers sharing cookies?
